style(editor): fix selection when dark mode is preferred

--- a/template/src/styles/cm.css
+++ b/template/src/styles/cm.css
@@ -4,5 +4,6 @@ html:not(.dark) {
   --cm-active-line: theme('colors.editor.light.activeLine');
   --cm-cursor-color: theme('colors.editor.light.cursor.width');
   --cm-cursor-width: theme('colors.editor.light.cursor.background');
-  --cm-selection-bg: theme('colors.editor.light.selection');
+  --cm-selection-bg-focus: theme('colors.editor.light.selectionFocus');
+  --cm-selection-bg-blur: theme('colors.editor.light.selectionBlur');
 }
